--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<?php
+$name="Ranvijay";
+$income="10lac";
+echo "the name of king is $name and his incomme is $income";
+echo"<br>";
+$x=true;
+echo var_dump($x);
+echo"<br>";
+$y=array("ranvijay","boss","hiii");
+echo var_dump($y);
+echo ($y[0]);
+?>
